--- a/bib_aliases.tex
+++ b/bib_aliases.tex
@@ -1,6 +1,7 @@
 %aliases for bib entries
 \def\NASixtyOnePaper{Abgrall:2014xwa} 
 \def\NAFortyNinePaper{Afanasev:1999iu}
+\def\T2KPaper{Abe:2011ks}
 \def\RhoPaper{Aduszkiewicz:2017anm}
 \def\QGSJetPaper{Ostapchenko:2010vb}
 \def\DPMJetPaper{Roesler:2000he}
