--- a/lib.bib
+++ b/lib.bib
@@ -701,6 +701,15 @@ in the NA61/SHINE experiment at CERN SPS}",
   address      = "Krak\'ow"
 }
 
+@phdthesis{AntoniAThesis,
+  author       = "Aduszkiewicz, A.", 
+  title        = "{Operation and performance of Time Projection Chambers
+of SHINE/NA61 experiment at CERN}",
+  school       = "",
+  year         = "2008"
+  address      = "Warszawa"
+}
+
 @mastersthesis{MartinThesis,
   author       = "Ruprecht, M.", 
   title        = "{Measurements of the Spectrum of Charged Hadrons in $\pi^-$+C Interactions with the \NASixtyOne Experiment}",
