--- a/main.tex
+++ b/main.tex
@@ -75,6 +75,7 @@
 \usepackage{rviewport}
 \usepackage{comment}
 \usepackage{cleveref}
+\crefname{chapter}{Chap.}{Chaps.}
 \crefname{appendix}{App.}{Apps.}
 \crefname{section}{Sec.}{Secs.}
 \crefname{paragraph}{Sec.}{Secs.}
