--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -108,6 +108,7 @@
 \newcommand{\meaneps}{\ensuremath{\mbox{$\langle\varepsilon\rangle$}}\xspace}
 \newcommand{\meanepsbb}{\ensuremath{\mbox{$\langle\varepsilon\rangle^\text{BB}$}}\xspace}
 \newcommand{\dedx}{\ensuremath{\mbox{\text{d}$E$/\text{d}$x$}}\xspace}
+\newcommand{\meandedx}{\ensuremath{\mbox{$\langle$\text{d}$E$/\text{d}$x\rangle$}}\xspace}
 \newcommand{\ncl}{\ensuremath{\mbox{$n_{\text{cl}}$}}\xspace}
 \newcommand{\chisq}{\ensuremath{\mbox{$\chi^2$}}\xspace}
 \newcommand{\redchisq}{\ensuremath{\mbox{$\chi^2/$ndf}}\xspace}
